# airbnb-clone-backend

./: README.md  package-lock.json  pyproject.toml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pet_allowed.py  0004_remove_house_pet_allowed_house_pets_allowed_and_more.py
medias/: models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  (+3 more)
users/: models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  views.py
(+6 files in other folders)
